--- a/P4OGL/P4OGL.vcxproj
+++ b/P4OGL/P4OGL.vcxproj
@@ -14,6 +14,7 @@
     <ClInclude Include="scr\auxiliar.h" />
     <ClInclude Include="scr\BOX.h" />
     <ClInclude Include="scr\PLANE.h" />
+    <ClInclude Include="scr\TRIANGLE.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="scr\auxiliar.cpp" />
@@ -28,6 +29,10 @@
     <None Include="..\shaders_P4\pp_points.frag" />
     <None Include="..\shaders_P4\pp_points.vert" />
     <None Include="..\shaders_P4\pp_points.geom" />
+    <None Include="..\shaders_P4\pp_quad.tcs" />
+    <None Include="..\shaders_P4\pp_quad.tes" />
+    <None Include="..\shaders_P4\pp_triangle.tcs" />
+    <None Include="..\shaders_P4\pp_triangle.tes" />
     <None Include="..\shaders_P4\pp_wired.frag" />
     <None Include="..\shaders_P4\pp_wired.geom" />
     <None Include="..\shaders_P4\pp_wired.vert" />
