--- a/P4OGL/P4OGL.vcxproj
+++ b/P4OGL/P4OGL.vcxproj
@@ -23,6 +23,9 @@
   <ItemGroup>
     <None Include="..\shaders_P4\fwRendering.frag" />
     <None Include="..\shaders_P4\fwRendering.vert" />
+    <None Include="..\shaders_P4\Modulo2\billboard.frag" />
+    <None Include="..\shaders_P4\Modulo2\billboard.geom" />
+    <None Include="..\shaders_P4\Modulo2\billboard.vert" />
     <None Include="..\shaders_P4\particleSystem.comp" />
     <None Include="..\shaders_P4\pp_map.frag" />
     <None Include="..\shaders_P4\pp_map.tcs" />
