--- a/P4OGL/P4OGL.vcxproj
+++ b/P4OGL/P4OGL.vcxproj
@@ -26,7 +26,7 @@
     <None Include="..\shaders_P4\Modulo2\billboard.frag" />
     <None Include="..\shaders_P4\Modulo2\billboard.geom" />
     <None Include="..\shaders_P4\Modulo2\billboard.vert" />
-    <None Include="..\shaders_P4\particleSystem.comp" />
+    <None Include="..\shaders_P4\Modulo2\particleSystem.comp" />
     <None Include="..\shaders_P4\pp_map.frag" />
     <None Include="..\shaders_P4\pp_map.tcs" />
     <None Include="..\shaders_P4\pp_map.tes" />
