--- a/P4OGL/P4OGL.vcxproj.filters
+++ b/P4OGL/P4OGL.vcxproj.filters
@@ -94,9 +94,6 @@
     <None Include="..\shaders_P4\pp_map.tcs">
       <Filter>shaders</Filter>
     </None>
-    <None Include="..\shaders_P4\particleSystem.comp">
-      <Filter>shaders</Filter>
-    </None>
     <None Include="..\shaders_P4\Modulo2\billboard.geom">
       <Filter>shaders\Modulo2</Filter>
     </None>
@@ -104,6 +101,9 @@
       <Filter>shaders\Modulo2</Filter>
     </None>
     <None Include="..\shaders_P4\Modulo2\billboard.vert">
+      <Filter>shaders\Modulo2</Filter>
+    </None>
+    <None Include="..\shaders_P4\Modulo2\particleSystem.comp">
       <Filter>shaders\Modulo2</Filter>
     </None>
   </ItemGroup>
